name:          brainfuck
synopsis:      Brainfuck tools written in haskell
description:   Provides various tools for working with brainfuck code.
homepage:      github.com/daoo/brainfuck
license:       PublicDomain
author:        daoo
version:       0.1.0.0
build-type:    Simple
category:      Language
cabal-version: >=1.8
tested-with:   GHC>=7.6

library
  exposed-modules:
    Brainfuck.CodeGen.C99
    Brainfuck.CodeGen.Dot
    Brainfuck.CodeGen.Haskell
    Brainfuck.CodeGen.Indented
    Brainfuck.Compile
    Brainfuck.Data.Brainfuck
    Brainfuck.Data.Expr
    Brainfuck.Data.IOMemory
    Brainfuck.Data.Tarpit
    Brainfuck.Data.ZipperMemory
    Brainfuck.Interpret
    Brainfuck.Optimization.Analysis
    Brainfuck.Optimization.Assignment
    Brainfuck.Optimization.Pipeline
    Brainfuck.Optimization.Tarpit
    Brainfuck.Optimization.WholeProgram
    Brainfuck.Parse
    Brainfuck.Utility
    Data.ListZipper
    Text.CodeWriter
  build-depends: base, mtl, array, containers, bytestring==0.10.2.0
  hs-source-dirs: src
  ghc-options: -Wall -fsimpl-tick-factor=200

executable bf
  main-is: src/Interpreter.hs
  build-depends: base, brainfuck, bytestring==0.10.2.0
  ghc-options: -Wall

executable bfc
  main-is: src/Compiler.hs
  build-depends: base, brainfuck, bytestring==0.10.2.0
  ghc-options: -Wall

test-suite brainfuck-tests
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: MainTestSuite.hs
  build-depends: base, brainfuck, QuickCheck, test-framework,
    test-framework-quickcheck2, bytestring==0.10.2.0
  ghc-options: -Wall -fno-warn-orphans
