name:          brainfuck
synopsis:      Brainfuck tools written in haskell
description:   Provides various tools for working with brainfuck code.
homepage:      github.com/daoo/brainfuck
license:       PublicDomain
author:        daoo
version:       0.1.0.0
build-type:    Simple
category:      Language
cabal-version: >=1.18

library
  exposed-modules:
    Brainfuck.CodeGen.C99
    Brainfuck.CodeGen.Dot
    Brainfuck.CodeGen.Haskell
    Brainfuck.CodeGen.Indented
    Brainfuck.CodeGen.LLVM
    Brainfuck.CodeGen.LLVM.Internal
    Brainfuck.CodeGen.LLVM.Writer
    Brainfuck.Compile
    Brainfuck.Data.Brainfuck
    Brainfuck.Data.Expr
    Brainfuck.Data.IOMachine
    Brainfuck.Data.Tarpit
    Brainfuck.Data.VirtualMachine
    Brainfuck.Data.ZipperMachine
    Brainfuck.Interpret
    Brainfuck.Optimization.Analysis
    Brainfuck.Optimization.Assignment
    Brainfuck.Optimization.Pipeline
    Brainfuck.Optimization.Tarpit
    Brainfuck.Optimization.WholeProgram
    Brainfuck.Parse
    Data.ListZipper
    Text.CodeWriter
  build-depends: base, mtl, array, containers, bytestring, QuickCheck
  hs-source-dirs: src
  default-language: Haskell2010

executable bf
  main-is: src/Interpreter.hs
  build-depends: base, brainfuck, bytestring
  default-language: Haskell2010

executable bfc
  main-is: src/Compiler.hs
  build-depends: base, brainfuck, bytestring
  default-language: Haskell2010
